@@ -1,3 +1,4 @@
+%define gtk2_version 2.6.0
 %define pygtk2_version 2.5.3-2
 %define gnome_python2_version 2.6.0-5
 
@@ -30,6 +31,9 @@ BuildRequires: usermode
 
 Requires(post):  shadow-utils
 Requires(preun): shadow-utils
+
+Requires(post):   gtk2 >= %{gtk2_version}
+Requires(postun): gtk2 >= %{gtk2_version}
 
 %description
 Sabayon is a tool to help sysadmins and user change and maintain the
@@ -81,7 +85,18 @@ rm -rf $RPM_BUILD_ROOT
 /usr/sbin/useradd  -r -s /sbin/nologin -c "Sabayon user" -g %{name}-admin %{name}-admin &>/dev/null || :
 /usr/sbin/usermod -d "" %{name}-admin &>/dev/null || :
 
+%post admin
+touch --no-create %{_datadir}/icons/hicolor
+if [ -x /usr/bin/gtk-update-icon-cache ]; then
+  gtk-update-icon-cache -q %{_datadir}/icons/hicolor
+fi
+
 %postun admin
+touch --no-create %{_datadir}/icons/hicolor
+if [ -x /usr/bin/gtk-update-icon-cache ]; then
+  gtk-update-icon-cache -q %{_datadir}/icons/hicolor
+fi
+
 if [ $1 -eq 0 ]; then
   /usr/sbin/userdel  %{name}-admin &>/dev/null || :
   /usr/sbin/groupdel %{name}-admin &>/dev/null || :
@@ -147,7 +162,7 @@ fi
 
 %{_datadir}/%{name}/glade/%{name}.glade
 %{_datadir}/applications/gnome-%{name}.desktop
-%{_datadir}/pixmaps/%{name}.png
+%{_datadir}/icons/hicolor/48x48/apps/%{name}.png
 
 %{python_sitelib}/%{name}/aboutdialog.py
 %{python_sitelib}/%{name}/aboutdialog.pyc
@@ -181,6 +196,10 @@ fi
 %ghost %{python_sitelib}/%{name}/usersdialog.pyo
 
 %changelog
+* Mon May 23 2005 Mark McLoughlin <markmc@redhat.com> - 0.19-1
+- Icon is now installed in the icon theme; update the
+  icon cache in %post and %postun
+
 * Wed May 18 2005 Mark McLoughlin <markmc@redhat.com> - 0.18-1
 - Update to 0.18
 
