@@ -1,5 +1,11 @@
 2005-05-23  Mark McLoughlin  <markmc@redhat.com>
 
+	* sabayon.spec.in: update for new icon location
+	and run update-icon-cache at the appropriate
+	times.
+
+2005-05-23  Mark McLoughlin  <markmc@redhat.com>
+
 	Make the window icon work.
 
 	* admin-tool/Makefile.am: install the icon in
